--- a/background.html
+++ b/background.html
@@ -1,8 +1,14 @@
-<html><head><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script></head><body><div id="cf"><h1>Kevin Topper's Website</h1>
-<img id="img" src=""></div></body>
+<html><head><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script></head>
+<body>
+  <div id="wrapper">
+    <div id = "gallery">
+      <img id="img" src="" style="width: 100%; opacity:0;">
+      </div>
+  </div>
+</body>
 
 <script>
-    var i = 1, howManyTimes = 4;
+    /*var i = 1, howManyTimes = 4;
     function f() {
 
       i++;
@@ -16,28 +22,40 @@
         $("#img").attr("src","img"+i+".jpg");
       }
     }
-    f();
+    f();*/
 </script>
 
 <style>html {
   text-align: center;
+  background-size: 100% 100%;
+  background-color: black;
+  overflow: hidden;
 }
-#cf img {
-  animation: zoominoutsinglefeatured 10s infinite;
+
+#gallery {
+  box-shadow: inset 0px 0px 200px 100px rgba(0,0,0,1.3);
+  max-width: 1080px;
+  margin: 0 auto;
+  background: skyblue no-repeat center center fixed;
+  opacity:0.5;
+  animation: fader 80s cubic-bezier(.9,0,0,.9) infinite, zoominoutsinglefeatured 20s infinite;
 }
 
 @keyframes zoominoutsinglefeatured {
-  0% {
-    transform: scale(1.4, 1.4);
-  }
+  0% { transform: scale(1.1, 1.1); }
+  50% { transform: scale(1.2, 1.2); }
+  100% { transform: scale(1.1, 1.1); }
+}
 
-  50% {
-    transform: scale(1.5, 1.5);
-  }
-
-  100% {
-    transform: scale(1.4, 1.4);
-  }
+@keyframes fader {
+  0% {background: url("images/img7.JPG"); background-size: cover;}
+  14.3% {background: url("images/img1.JPG"); background-size: cover;}
+  26.6% {background: url("images/img2.JPG"); background-size: cover;}
+  42.9% {background: url("images/img3.JPG"); background-size: cover;}
+  57.2% {background: url("images/img4.JPG"); background-size: cover;}
+  71.5% {background: url("images/img5.JPG"); background-size: cover;}
+  85.8% {background: url("images/img6.JPG"); background-size: cover;}
+  100% {background: url("images/img7.JPG"); background-size: cover;}
 }
 
 </style></html>
