--- a/background.html
+++ b/background.html
@@ -1,61 +1,114 @@
-<html><head><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script></head>
+<html>
+  <head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Cambay' rel='stylesheet'>
+  </head>
 <body>
-  <div id="wrapper">
-    <div id = "gallery">
-      <img id="img" src="" style="width: 100%; opacity:0;">
-      </div>
+  <div id = "background">
+    <img id="img" src="" style="width: 100%; opacity:0;">
+  </div>
+  <div class="text">
+    <h1 id = "title"><strong>Kevin Topper</strong></h3>
+    <p id = "sub">Computer Science Student</p>
+    <p id = "sub">University at Buffalo</p>
+    <p id = "sub">kevintop@buffalo.edu</p>
+    <div id="icons">
+      <a href="https://github.com/ktopz" target="_blank">
+        <i class="fab fa-github" style="font-size:48px; color:white; margin-left: 10x; margin-right: 10px;"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/kevintop/" target="_blank">
+        <i class="fab fa-linkedin" style="font-size:50px; color:white; margin-right: 10px;"></i>
+      </a>
+      <a href="Resume.pdf" target="_blank">
+        <i class="fas fa-file" style="font-size:48px; color:white; margin-right: 10px;"></i>
+      </a>
+    </div>
   </div>
 </body>
 
 <script>
-    /*var i = 1, howManyTimes = 4;
-    function f() {
 
-      i++;
-      if( i < howManyTimes ){
-          setTimeout( f, 5000 );
-          $("#img").attr("src","img"+i+".jpg");
-      }
-      else{
-        i = 1;
-        setTimeout( f, 5000 );
-        $("#img").attr("src","img"+i+".jpg");
-      }
-    }
-    f();*/
 </script>
 
-<style>html {
+<style>
+#icons {
+  padding-top: 8px;
+}
+#title {
+  font-size: 60px;
+  margin-bottom:-0.15em;
+}
+#sub {
+  font-size: 20px;
+  margin-bottom:0.2em;
+  margin-top:0em;
+}
+.text {
+  -webkit-text-size-adjust: 100%;
+  position: relative;
   text-align: center;
-  background-size: 100% 100%;
-  background-color: black;
-  overflow: hidden;
+  color: white;
+  font-family: 'Cambay';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-#gallery {
-  box-shadow: inset 0px 0px 200px 100px rgba(0,0,0,1.3);
+#background {
+  -webkit-transform:translate3d(0,0,0);
+  box-shadow: inset 0px 0px 200px 150px rgba(0,91,187,1.3);
   max-width: 1080px;
   margin: 0 auto;
-  background: skyblue no-repeat center center fixed;
-  opacity:0.5;
-  animation: fader 80s cubic-bezier(.9,0,0,.9) infinite, zoominoutsinglefeatured 20s infinite;
+  background: skyblue;
+  opacity:0.75;
+  animation: fadein 10s, fader 80s cubic-bezier(.9,0,0,.9) infinite, zoominoutsinglefeatured 80s infinite;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
 
 @keyframes zoominoutsinglefeatured {
   0% { transform: scale(1.1, 1.1); }
-  50% { transform: scale(1.2, 1.2); }
-  100% { transform: scale(1.1, 1.1); }
+  11.1% { transform: scale(1.0, 1.0); }
+  22.2% { transform: scale(1.05, 1.05); }
+  33.3% { transform: scale(1.0, 1.0); }
+  44.4% { transform: scale(1.05, 1.05); }
+  55.5% { transform: scale(1.0, 1.0); }
+  66.6% { transform: scale(1.05, 1.05); }
+  77.7% { transform: scale(1.0, 1.0); }
+  88.8% { transform: scale(1.05, 1.05); }
+  100% {transform: scale(1.05,1.05);}
 }
 
 @keyframes fader {
-  0% {background: url("images/img7.JPG"); background-size: cover;}
-  14.3% {background: url("images/img1.JPG"); background-size: cover;}
-  26.6% {background: url("images/img2.JPG"); background-size: cover;}
-  42.9% {background: url("images/img3.JPG"); background-size: cover;}
-  57.2% {background: url("images/img4.JPG"); background-size: cover;}
-  71.5% {background: url("images/img5.JPG"); background-size: cover;}
-  85.8% {background: url("images/img6.JPG"); background-size: cover;}
-  100% {background: url("images/img7.JPG"); background-size: cover;}
+  0% {background-image: url("images/plain.JPG"), url("images/img2.JPG"); background-size: cover;}
+  11.1% {background-image: url("images/img2.JPG"), url("images/img8.JPG"); background-size: cover;}
+  22.2% {background-image: url("images/img8.JPG"), url("images/img3.JPG"); background-size: cover;}
+  33.3% {background-image: url("images/img3.JPG"), url("images/img7.JPG"); background-size: cover;}
+  44.4% {background-image: url("images/img7.JPG"), url("images/img5.JPG"); background-size: cover;}
+  55.5% {background-image: url("images/img5.JPG"), url("images/img6.JPG"); background-size: cover;}
+  66.6% {background-image: url("images/img6.JPG"), url("images/img1.JPG"); background-size: cover;}
+  77.7% {background-image: url("images/img1.JPG"), url("images/img4.JPG"); background-size: cover;}
+  88.8% {background-image: url("images/img2.JPG"), url("images/plain.JPG"); background-size: cover;}
+  100% {background-image: url("images/plain.JPG"); background-size: cover;}
 }
 
+*{
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility:    hidden;
+  -ms-backface-visibility:     hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+
+}
+
+html {
+  animation: fadein 5s;
+  text-align: center;
+  background-size: 100% 100%;
+  background-color: #005bbb;
+  overflow: hidden;
+}
 </style></html>
