--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
 
 #background {
   -webkit-transform:translate3d(0,0,0);
-  box-shadow: inset 0px 0px 200px 150px rgba(0,91,187,1.3);
+  box-shadow: inset 0px 0px 200px 150px rgba(0,91,187,1.1);
   max-width: 1080px;
   margin: 0 auto;
   background: skyblue;
-  opacity:0.75;
-  animation: fadein 45s, fader 100s cubic-bezier(.9,0,0,.9) infinite, zoominoutsinglefeatured 100s infinite;
+  opacity:0.6;
+  animation-delay: 10s;
+  animation: fader 100s cubic-bezier(.8,0,0,.8) infinite, zoominoutsinglefeatured 100s infinite;
 }
 
 @keyframes fadein {
@@ -72,13 +73,13 @@
 
 @keyframes zoominoutsinglefeatured {
   0% { transform: scale(1.1, 1.1); }
-  11.1% { transform: scale(1.0, 1.0); }
+  11.1% { transform: scale(1.05, 1.05); }
   22.2% { transform: scale(1.1, 1.1); }
-  33.3% { transform: scale(1.0, 1.0); }
+  33.3% { transform: scale(1.05, 1.05); }
   44.4% { transform: scale(1.1, 1.1); }
-  55.5% { transform: scale(1.0, 1.0); }
+  55.5% { transform: scale(1.05, 1.05); }
   66.6% { transform: scale(1.1, 1.1); }
-  77.7% { transform: scale(1.0, 1.0); }
+  77.7% { transform: scale(1.05, 1.05); }
   88.8% { transform: scale(1.1, 1.1); }
   100% {transform: scale(1.1, 1.1); }
 }
