more bug fixes and added gitignore

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 }
 
 @keyframes fader {
-  0% {background-image: url("images/plain.JPG"), url("images/img2.JPG"); background-size: cover;}
+  0% {background-image: url("images/img0.JPG"), url("images/img2.JPG"); background-size: cover;}
   11.1% {background-image: url("images/img2.JPG"), url("images/img8.JPG"); background-size: cover;}
   22.2% {background-image: url("images/img8.JPG"), url("images/img3.JPG"); background-size: cover;}
   33.3% {background-image: url("images/img3.JPG"), url("images/img7.JPG"); background-size: cover;}
@@ -94,7 +94,7 @@
   66.6% {background-image: url("images/img6.JPG"), url("images/img1.JPG"); background-size: cover;}
   77.7% {background-image: url("images/img1.JPG"), url("images/img4.JPG"); background-size: cover;}
   88.8% {background-image: url("images/img2.JPG"), url("images/plain.JPG"); background-size: cover;}
-  100% {background-image: url("images/plain.JPG"); background-size: cover;}
+  100% {background-image: url("images/img0.JPG"); background-size: cover;}
 }
 
 *{
