--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
 <body>
   <div id = "background">
-    <img id="img" src="" style="width: 100%; opacity:0;">
+    <img id="img" src="images/img0.jpg" style="width: 100%; opacity:0;">
   </div>
   <div class="text">
     <h1 id = "title"><strong>Kevin Topper</strong></h3>
